--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,8 @@
 <head>
   <title>Meteor React Material-UI Project</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
+  <link rel="icon" href="/images/favicon.ico">
 </head>
 
 <body>
